--- a/WonInfo/app/src/main/res/layout/setting_alram.xml
+++ b/WonInfo/app/src/main/res/layout/setting_alram.xml
@@ -65,7 +65,7 @@
             android:layout_marginBottom="8dp"
             android:text="알림 소리"
             android:textColor="@color/Theme_Blue"
-            android:textSize="@dimen/middle_size"
+            android:textSize="@dimen/font_13sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +103,7 @@
             android:layout_marginBottom="8dp"
             android:text="미리 보기"
             android:textColor="@color/Theme_Blue"
-            android:textSize="@dimen/middle_size"
+            android:textSize="@dimen/font_13sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -141,7 +141,7 @@
             android:layout_marginBottom="8dp"
             android:text="배너 알림"
             android:textColor="@color/Theme_Blue"
-            android:textSize="@dimen/middle_size"
+            android:textSize="@dimen/font_13sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -209,7 +209,7 @@
             android:layout_marginBottom="8dp"
             android:text="댓글알림"
             android:textColor="@color/Theme_Blue"
-            android:textSize="@dimen/middle_size"
+            android:textSize="@dimen/font_13sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -247,7 +247,7 @@
             android:layout_marginBottom="8dp"
             android:text="새글 알림"
             android:textColor="@color/Theme_Blue"
-            android:textSize="@dimen/middle_size"
+            android:textSize="@dimen/font_13sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -313,7 +313,7 @@
             android:layout_marginBottom="8dp"
             android:text="수신 및 발신"
             android:textColor="@color/Theme_Blue"
-            android:textSize="@dimen/middle_size"
+            android:textSize="@dimen/font_13sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
