--- a/WonInfo/app/src/main/res/layout/main_appbar_layout.xml
+++ b/WonInfo/app/src/main/res/layout/main_appbar_layout.xml
@@ -8,7 +8,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/Theme_Yellow">
+        android:background="@color/Theme_Red">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -72,6 +72,8 @@
         android:layout_gravity="bottom"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
+        android:paddingTop="1dp"
+        android:backgroundTint="@color/Theme_LightGray"
         android:background="?android:attr/windowBackground"
         app:itemIconTint="@drawable/select_bottom_navigation"
         app:itemBackground="@color/Theme_White"
