한솔 디자인 추가 #예비군 팝업창 #군대휴학 팝업창 #댓글 아이콘 바꿈

--- a/WonInfo/app/src/main/res/layout/community_item_document.xml
+++ b/WonInfo/app/src/main/res/layout/community_item_document.xml
@@ -199,28 +199,37 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout6"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/Theme_Beige"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_height="36dp"
+            android:background="@drawable/all_shape_roundrectanglebox"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <EditText
                 android:id="@+id/board1_edit_commentwrite"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:background="@null"
                 android:ems="10"
                 android:hint="새 댓글을 작성하세요."
                 android:inputType="textPersonName"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/board1_btn_commentwrite"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/board1_btn_commentwrite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/ic_send_2"
+                android:backgroundTint="@color/Theme_Blue"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
 
