--- a/WonInfo/app/src/main/res/layout/setting.xml
+++ b/WonInfo/app/src/main/res/layout/setting.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,6 +15,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
+
         <ImageView
             android:id="@+id/setting_imageView"
             android:layout_width="wrap_content"
@@ -25,13 +26,14 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@mipmap/ic_appicon_round" />
 
         <TextView
-            android:id="@+id/setting_nikname"
+            android:id="@+id/setting_nickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -54,7 +56,7 @@
             android:textSize="@dimen/bigtitle_size"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/setting_imageView"
-            app:layout_constraintTop_toBottomOf="@+id/setting_nikname" />
+            app:layout_constraintTop_toBottomOf="@+id/setting_nickname" />
 
         <TextView
             android:id="@+id/setting_department"
@@ -67,7 +69,7 @@
             android:textSize="@dimen/bigtitle_size"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/setting_year"
-            app:layout_constraintTop_toBottomOf="@+id/setting_nikname" />
+            app:layout_constraintTop_toBottomOf="@+id/setting_nickname" />
 
         <ImageView
             android:id="@+id/setting_email"
@@ -98,6 +100,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/setting_btn1"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginTop="8dp"
@@ -169,6 +172,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/setting_btn2"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@drawable/all_ripple_click_roundrectanglebox"
@@ -211,6 +215,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/setting_btn3"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@drawable/all_ripple_click_roundrectanglebox"
@@ -253,6 +258,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/setting_btn4"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@drawable/all_ripple_click_roundrectanglebox"
@@ -295,6 +301,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/setting_btn5"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@drawable/all_ripple_click_roundrectanglebox"
@@ -363,6 +370,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/setting_btn6"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@drawable/all_ripple_click_roundrectanglebox"
@@ -405,6 +413,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/setting_btn7"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@drawable/all_ripple_click_roundrectanglebox"
