--- a/WonInfo/app/src/main/res/layout/community_item_comment.xml
+++ b/WonInfo/app/src/main/res/layout/community_item_comment.xml
@@ -18,16 +18,16 @@
             android:background="@drawable/box"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/comminity_board1_layout">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/community_comment1_profile"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginStart="12dp"
-                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/community_comment1_id"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/community_comment1_id"
                 app:srcCompat="@drawable/ic_profile" />
 
             <TextView
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="6dp"
                 android:text="comment_id"
                 android:textColor="@color/Theme_Black"
                 android:textSize="@dimen/font_14sp"
@@ -64,10 +64,21 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="12dp"
                 android:text="10/01 19:22"
+                android:textAlignment="textEnd"
                 android:textColor="@color/Theme_Gray"
                 android:textSize="11sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:background="@color/Theme_Red">
+
+            </FrameLayout>
 
 
         </android.support.constraint.ConstraintLayout>
